--- a/ElectricityMarkets/appsettings.json
+++ b/ElectricityMarkets/appsettings.json
@@ -6,9 +6,9 @@
     }
   },
   "DbConfig": {
-    "user": "santral_user",
+    "user": "sa",
     "port": 1433,
-    "password": "a.e.i1980",
+    "password": "password",
     "host": "(local)",
     "database": "ElectricityMarket"
   },
